--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-ripples": "^2.2.1",
+    "react-router-dom": "^7.4.1",
+    "react-text-transition": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
