--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "aos": "^2.3.4",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^7.4.1",
-    "react-text-transition": "^3.1.0"
+    "react-text-transition": "^3.1.0",
+    "sonner": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
