--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emailjs": "^4.0.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
