--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@reduxjs/toolkit": "^2.6.1",
     "aos": "^2.3.4",
     "emailjs": "^4.0.3",
+    "lightgallery": "^2.8.3",
+    "lottie-react": "^2.4.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-animated-cursor": "^2.11.2",
@@ -31,6 +33,7 @@
     "@tailwindcss/vite": "^4.0.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
